[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/inventory/dogecoin.png" type="Texture" id=1]
[ext_resource path="res://scripts/Inventory.gd" type="Script" id=2]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 397, 492 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.919922
anchor_top = 0.18
anchor_right = 0.990234
anchor_bottom = 0.82
color = Color( 1, 1, 1, 0.211765 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.5
margin_top = 11.0
margin_right = 30.5
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Inventory"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
anchor_left = 0.333333
anchor_top = 0.0963542
anchor_right = 0.888889
anchor_bottom = 0.200521
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="money" type="Label" parent="ColorRect/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -13.0
margin_right = -12.0
margin_bottom = 1.0
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="TextureRect2" type="TextureRect" parent="ColorRect"]
anchor_left = 0.222222
anchor_top = 0.299479
anchor_right = 0.777778
anchor_bottom = 0.403646
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect3" type="TextureRect" parent="ColorRect"]
anchor_left = 0.222222
anchor_top = 0.442708
anchor_right = 0.777778
anchor_bottom = 0.546875
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect4" type="TextureRect" parent="ColorRect"]
anchor_left = 0.222222
anchor_top = 0.59375
anchor_right = 0.777778
anchor_bottom = 0.697917
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect5" type="TextureRect" parent="ColorRect"]
anchor_left = 0.222222
anchor_top = 0.739583
anchor_right = 0.777778
anchor_bottom = 0.84375
expand = true
__meta__ = {
"_edit_use_anchors_": true
}
